--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.5",
     "@tabler/icons-react": "^3.33.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "motion": "^12.12.1",
     "next": "15.3.2",
     "node": "^20.19.2",
