--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.0",
     "@supabase/supabase-js": "^2.49.5",
     "@tabler/icons-react": "^3.33.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "motion": "^12.12.1",
