mise àjours gold

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.3.2",
     "node": "^20.19.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "sass": "^1.89.0",
     "scss": "^0.2.4",
