--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@supabase/supabase-js": "^2.49.5",
-    "@tabler/icons-react": "^3.33.0",
+    "@tabler/icons-react": "^3.36.1",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "node": "^20.19.2",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
@@ -28,15 +30,19 @@
     "sass": "^1.89.0",
     "scss": "^0.2.4",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/cobe": "^0.5.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwind-animate": "^0.2.10",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
